# wrust

./: Cargo.toml  README.md
inject_struct/: Cargo.toml
inject_struct/src/: lib.rs
shared/: Cargo.toml
shared/src/: constants.rs  error.rs  form_data.rs  lib.rs  query.rs  request.rs  response.rs  route.rs  url_encoding.rs  wrust_traits.rs
src/: main.rs  person.rs  route_builder.rs  router.rs  test.rs  thread_pool.rs  wrust.rs
src/public/: index.css  index.js
src/views/: index.html
src/views/nested/: index.html  test.html
