[package]
name = "wrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", features = ["thread-pool"] }
inject_struct = { path = "inject_struct" }
shared = { path = "shared" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
lazy_static = "1.4.0"

[workspace]
members = [
    ".",
    "inject_struct",
    "shared",
]